--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "sequelize": "^6.37.5",
     "typescript": "^5.7.2"
   }
