--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -11,10 +11,7 @@ RUN npm run build
 FROM nginx:alpine
 
 # Copier le build généré dans le répertoire où Nginx sert les fichiers
-COPY --from=builder /app/build /usr/share/nginx/html
-
-# Copier un fichier de configuration Nginx personnalisé si nécessaire (optionnel)
-# COPY nginx.conf /etc/nginx/nginx.conf
+COPY --from=builder /app/dist /usr/share/nginx/html
 
 EXPOSE 80
 
