--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "pg": "^8.13.1",
     "sequelize": "^6.37.5",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
