--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     volumes:
       - ./bdd-postgre/create-tables.sql:/docker-entrypoint-initdb.d/create-tables.sql:ro
       - ./bdd-postgre/data:/data
+    networks:
+      - backend_network
 
   backend:
     build:
@@ -22,6 +24,9 @@ services:
       - /usr/src/app/node_modules
     depends_on:
       - postgres
+    networks:
+      - frontend_network
+      - backend_network
 
   frontend:
     build:
@@ -32,3 +37,11 @@ services:
       - /usr/src/app/node_modules
     ports:
       - "80:80"
+    networks:
+      - frontend_network
+
+networks:
+  backend_network: # Réseau entre backend et PostgreSQL
+    driver: bridge
+  frontend_network: # Réseau entre frontend et backend
+    driver: bridge
