--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,8 @@ services:
     build:
       context: ./backend
     container_name: plm_backend
+    ports:
+      - "3000:3000"
     env_file:
       - .env
     volumes: #Pour éviter de devoir rebuild les images à chaque changement sur les fichiers
